crates/sui-display/src/v2/snapshots/sui_display__v2__parser__tests__datatype_whitespace.snap
---
source: crates/sui-display/src/v2/parser.rs
expression: "strands(r#\"{0x1 :: coin :: Coin<0x2::sui::SUI>}\"#)"
---
Error: Unexpected '::' at offset 5, expected one of ':', '|', or '}'
