crates/sui-display/src/v2/snapshots/sui_display__v2__parser__tests__enum_literal_whitespace.snap
---
source: crates/sui-display/src/v2/parser.rs
expression: "strands(r#\"{0x1::option::Option<u64>::Some # 1 (42u64)}\"#)"
---
{ 0x0000000000000000000000000000000000000000000000000000000000000001::option::Option<u64>::Some#1(
      42u64,
  )
}@0
