crates/sui-display/src/v2/snapshots/sui_display__v2__parser__tests__enum_whitespace.snap
---
source: crates/sui-display/src/v2/parser.rs
expression: "strands(r#\"{0x1::option::Option<u64>::Some # 1 (42)}\"#)"
---
Error: Unexpected whitespace at offset 31, expected '#'
